# FlappyBird

./: CMakeLists.txt
Boost/: Boost.h
Entity/: Entity.h
MainWindow/: MainWindow.h
Score/: Score.h
classBird/: Bird.h
classCar/: Car.h
classPipes/: Pipes.h
classPoint/: Point.h
src/: CMakeLists.txt  main.cpp
